Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,26 +1,26 @@
 {
-  "store_id": 51624,
-  "name": "takedag45",
-  "domain": "takedag45.netlify.app",
-  "short_name": "takedag45",
-  "description": "takedag45",
-  "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
+  "domain": "xiaomiconcept.netlify.app",
+  "currency_symbol": "R$",
+  "primary_color": "#ffffff",
   "theme": {
     "bootswatch": "_",
-    "custom": "_"
+    "custom": "clean-white"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "repository": "ecomplus-stores/takedag45",
+  "logo": "/img/uploads/whatsapp-image-2025-09-10-at-14.46.20.jpeg",
+  "name": "XIAOMI CONCEPT",
+  "short_name": "takedag45",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR",
-  "repository": "ecomplus-stores/takedag45",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
-  "font_family": "_"
+  "country_code": "BR",
+  "secondary_color": "#ff7500",
+  "icon": "/img/icon.png",
+  "store_id": 51624,
+  "description": "takedag45",
+  "large_icon": "/img/large-icon.png"
 }
