Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -8,19 +8,19 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/takedag45",
-  "logo": "/img/uploads/whatsapp-image-2025-09-10-at-14.46.20.jpeg",
+  "logo": "/img/uploads/mi.png",
   "name": "XIAOMI CONCEPT",
-  "short_name": "takedag45",
+  "short_name": "XIAOMI CONCEPT",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "_",
-  "favicon": "/img/uploads/favicon.png",
+  "favicon": "/img/uploads/mi.png",
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#ff7500",
-  "icon": "/img/icon.png",
+  "icon": "/img/uploads/mi.png",
   "store_id": 51624,
   "description": "takedag45",
-  "large_icon": "/img/large-icon.png"
+  "large_icon": "/img/uploads/mi.png"
 }
